[package]
name = "zentao-scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.2"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
axum = "0.6.20"
anyhow = "1.0.75"
serde = { version = "1", features = ["derive"] }
once_cell = "1.18.0"
uuid = { version = "1.5.0", features = ["v4"] }
md-5 = "0.10.6"
hex = "0.4.3"
serde_json = "1.0.107"
